--- a/css/index.css
+++ b/css/index.css
@@ -780,6 +780,7 @@ a {
         background-color: white !important;
         position: fixed !important;
         padding: 0 !important;
+        box-shadow: 0 15px 40px rgba(132, 156, 174, 0.15);
     }
 
     .hero-section-container {
@@ -790,8 +791,12 @@ a {
         padding-left: 1em;
     }
 
-    .navbar-brand, .navbar-toggler {
-        margin: 1rem 1.5rem;
+    .navbar-brand {
+        margin: 1rem 1rem;
+    }
+
+    .navbar-toggler {
+        margin: 1rem 0.5rem;
     }
 
     .header-navbar .show .nav-link {
@@ -815,7 +820,7 @@ a {
 
     .header-navbar .download-btn {
         top: 2em;
-        right: 9.5em;
+        right: 6.5em;
         font-size: 10px;
     }
 
