--- a/css/index.css
+++ b/css/index.css
@@ -69,10 +69,37 @@ li a {
     right: 5.8em;
 }
 
+.overlay {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: -100%;
+    bottom: 0;
+    background-image: linear-gradient(#0793ff, #28A7CC);
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+.overlay-content {
+    position: relative;
+    width: 100%;
+    padding: 80px 30px 0 30px;
+}
+
+.overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 20px;
+    color: white;
+    display: block;
+    transition: 0.3s;
+}
+
 .hero-section-container {
     height: 100vh;
-    background: url("../images/hero-img.svg") no-repeat;
-    background-position: 100% 0;
+    background: url("../images/hero-img.svg") no-repeat 100% 0;
 }
 
 .hero-section {
